# threshold-based-prediction

./: .gitignore  FreeSurfer_Regions.py  README.md  SVM.py  SVM_for_R1.py  SVM_for_R2star.py  SVM_for_thesis.py  SVM_for_thesis2.py  confidence.py  error_display.py  pyproject.toml  svm_roc_curve_analysis.py
docs/: csv_data_format.md
examples/: README.md
examples/configs/: analysis_config.yaml  data_prep_animal_rat.yaml  data_prep_csv.yaml  data_prep_human.yaml
examples/notebooks/: README.md  freesurfer_api_example.ipynb  sigma_api_example.ipynb
examples/sample_data/freesurfer_example/: README.md  freesurfer_example_config.yaml  freesurfer_example_data.csv  freesurfer_example_metadata.csv  freesurfer_example_report.html  freesurfer_example_results.csv  generate_synthetic_freesurfer.py
examples/sample_data/freesurfer_example/subjects/subject_001/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_002/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_003/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_004/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_005/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_006/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_007/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_008/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_009/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_010/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_011/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_012/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_013/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_014/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_015/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_016/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_017/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_018/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_019/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/freesurfer_example/subjects/subject_020/stats/: aseg.stats  lh.aparc.stats  rh.aparc.stats
examples/sample_data/sigma_example/: README.md  generate_synthetic_sigma.py  sigma_example_config.yaml  sigma_example_data.csv  sigma_example_metadata.csv  sigma_example_report.html  sigma_example_results.csv  sigma_labels.csv
legacy_code/: Bagging_R1_R2star.py  LoadStatsCSV.py  SVM_Bagging_for_thesis.py  error_measure.py
src/threshold_prediction/: __init__.py  cli.py
src/threshold_prediction/data/: pipeline_factory.py  validation.py
src/threshold_prediction/data/animal/: labelmap_extractor.py
src/threshold_prediction/data/human/: freesurfer_parser.py
src/threshold_prediction/evaluation/: __init__.py  reports.py
src/threshold_prediction/utils/: config.py
threshold_prediction/: __init__.py  cli.py
threshold_prediction/data/: pipeline_factory.py  standardizer.py
threshold_prediction/data/animal/: atlas_registry.py
threshold_prediction/evaluation/: metrics.py  visualization.py
threshold_prediction/features/: regions.py
threshold_prediction/models/: ensemble.py  threshold_analyzer.py
threshold_prediction/utils/: config.py
